[gd_scene load_steps=13 format=3 uid="uid://bpdobfook80da"]

[ext_resource type="Script" path="res://scenes/objects/enemies/goomba.gd" id="1_g0l7p"]
[ext_resource type="Texture2D" uid="uid://dffstk2br0228" path="res://assets/textures/enemies.png" id="2_35hdl"]
[ext_resource type="Script" path="res://scenes/effects/sprite_flip.gd" id="3_4p5cv"]
[ext_resource type="Script" path="res://scenes/objects/ai/patrol.gd" id="3_qsaae"]
[ext_resource type="Script" path="res://scenes/objects/ai/ai_timer.gd" id="5_0tohq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_csjkr"]
atlas = ExtResource("2_35hdl")
region = Rect2(0, 0, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ajqsr"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qixh6"]
size = Vector2(14, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5vfb"]
size = Vector2(1.1, 12)

[sub_resource type="Animation" id="Animation_dhqh2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_kfx74"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 11), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jonp8"]
_data = {
"RESET": SubResource("Animation_dhqh2"),
"appear": SubResource("Animation_kfx74")
}

[node name="goomba" type="RigidBody2D"]
collision_layer = 8
collision_mask = 9
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_g0l7p")

[node name="sprite" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_csjkr")

[node name="flipper" type="Timer" parent="sprite"]
wait_time = 0.12
autostart = true
script = ExtResource("3_4p5cv")
vertical_flips = false

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(9.53674e-07, 1.58933e-08)
rotation = 3.14159
shape = SubResource("RectangleShape2D_ajqsr")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="patrol_ai" type="Node" parent="."]
script = ExtResource("3_qsaae")
speed = -0.6

[node name="timer" type="Timer" parent="patrol_ai"]
wait_time = 0.5
one_shot = true
autostart = true
script = ExtResource("5_0tohq")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("RectangleShape2D_qixh6")
debug_color = Color(0, 0.6, 0.701961, 0)

[node name="turn" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 9

[node name="shape_left" type="CollisionShape2D" parent="turn"]
position = Vector2(-6.5, 0)
shape = SubResource("RectangleShape2D_o5vfb")

[node name="shape_right" type="CollisionShape2D" parent="turn"]
position = Vector2(6.5, 0)
shape = SubResource("RectangleShape2D_o5vfb")

[node name="animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jonp8")
}

[connection signal="timeout" from="sprite/flipper" to="sprite/flipper" method="_on_timeout"]
[connection signal="timeout" from="patrol_ai/timer" to="patrol_ai/timer" method="_on_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="turn" to="." method="_on_turn_body_entered"]
